syntax = "proto3";
package quite.proto;

import "quite/proto/meta.proto";


service MetaService {

}
